# TestingCW3

./: CMakeLists.txt  Main.cpp  README.md  fileProcessor.cpp  fileProcessor.h  gameOn.cpp  gameOn.h  longerTask.cpp  longerTask.h  masterDraw.cpp  masterDraw.h  player.cpp  player.h  shortTask.cpp  shortTask.h  taskAllocator.h
